# auto_canonical_lr1

./: Cargo.toml  README.md  input.txt  output.txt
examples/: rightmost_derivation.rs
src/: error.rs  grammar.rs  item.rs  lib.rs  macros.rs  main.rs  panic.rs  table.rs  token.rs
